--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "TEST=true mocha --watch server.spec.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "watch": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -18,11 +19,19 @@
   },
   "homepage": "https://github.com/juliandkatz/jdk-lattice-code-test-server#readme",
   "dependencies": {
+    "axios": "^0.18.0",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^6.1.3",
+    "nodemon": "^1.18.11",
     "supertest": "^4.0.2"
+  },
+  "standard": {
+    "env": [
+      "mocha"
+    ]
   }
 }
